# embedAi-agent

./: .gitignore  CHANGELOG.md  CONFIG_CHECKLIST.md  GETTING_STARTED.md  README.md  docker-compose.yml  install.sh  quick-start.sh  update_version.py
backend/: .env.example  README.md  pyproject.toml
backend/.env.json.example/: DEFAULT_AGENTS_JSON.json
backend/app/: __init__.py  main.py
backend/app/core/: __init__.py  chat_models.py  config.py  crawler_database.py  database.py  dependencies.py  embedding.py  errors.py  llm.py  logging.py  paths.py  rerank.py
backend/app/models/: __init__.py  agent.py  base.py  conversation.py  crawler.py  message.py  product.py  skill.py  tool_call.py  user.py
backend/app/repositories/: __init__.py  base.py  conversation.py  crawler.py  message.py  product.py  tool_call.py  user.py
backend/app/routers/: __init__.py  admin.py  agents.py  chat.py  conversations.py  crawler.py  ocr.py  prompts.py  quick_setup.py  skills.py  support.py  system.py  system_config.py  users.py  ws.py
backend/app/scheduler/: scheduler.py
backend/app/schemas/: __init__.py  agent.py  chat.py  conversation.py  effective_config.py  events.py  intent.py  product.py  quick_setup.py  recommendation.py  skill.py  stream.py  support.py  system_config.py  websocket.py
backend/app/services/: __init__.py  chat_stream.py  chat_stream_sdk.py  conversation.py  product.py  system_config.py  (+1 more)
backend/data/: quick_setup_state.json
backend/script/: test-langchain-openai.py
backend/scripts/: import_products.py  migrate_v2_presence.py
backend/tests/: conftest.py
(+403 files in other folders)
